# cctv-xinwen-lianbo-en

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  translation_service.py  utils.py
output/【感知生态之变】绿水青山就是金山银山 CCTV「新闻联播」20250809/: transcription.json  transcription.srt  translation.srt  translation_shifted.srt
output/【新思想引领新征程】乡村旅游蓬勃发展 助力乡村全面振兴 CCTV「新闻联播」20250811/: transcription.json  transcription.srt  translation.srt  translation_shifted.srt
output/【新思想引领新征程】数字乡村建设助力农业农村现代化 CCTV「新闻联播」20250810/: pl_translation.srt  transcription.json  transcription.srt  translation.srt  translation_shifted.srt
